--- a/src/fragments.module.css
+++ b/src/fragments.module.css
@@ -1,9 +1,39 @@
-.section {
-	height: 61.8vw;
-	box-sizing: border-box;
-	text-align: center;
+.Section {
+  height: 61.8vw;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-.displayImage {
-	max-height: 380px;
+.DisplayImage {
+  max-height: 380px;
+}
+
+.DocumentContainer {
+  display: flex;
+  flex-direction: row;
+  overflow-y: hidden;
+  padding-left: 2rem;
+}
+
+.ScreenPage {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  background: white;
+  width: 100%;
+  height: 100%;
+}
+
+.Article {
+  overflow-y: auto;
+  flex-grow: 1;
+  width: min-content;
+  padding-right: 2rem;
+}
+
+.Article img {
+  max-width: 80%;
 }
