迁移全局状态到 AppState，帮助文档改名 HelpDoc，实现导航栏功能

--- a/src/fragments.module.css
+++ b/src/fragments.module.css
@@ -8,11 +8,15 @@
 	max-height: 380px;
 }
 
-.DocumentContainer {
+.HelpDocContainer {
 	display: flex;
 	flex-direction: row;
 	overflow-y: hidden;
 	padding-left: 2rem;
+}
+
+.HelpDocContainer > * {
+	margin-top: 1.5rem;
 }
 
 .ScreenPage {
