--- a/src/fragments.module.css
+++ b/src/fragments.module.css
@@ -63,13 +63,12 @@
 .Success {
 	flex: 1;
 	background: #56ab2f; /* fallback for old browsers */
-	background: linear-gradient(to top, #a8e063, #56ab2f);
+	background: linear-gradient(to top, #5fe053, #56ab2f);
 	color: white;
+	padding-top: 6rem;
+	text-align: center;
 }
 
 .Success h1 {
 	color: inherit;
-	padding-top: 8rem;
-	text-align: center;
-	text-shadow: 2px 2px 2px #00000085;
 }
