添加图片动效、改进表单

--- a/src/fragments.module.css
+++ b/src/fragments.module.css
@@ -44,13 +44,17 @@
 	font-size: 12pt !important;
 }
 
+.FormInMobile {
+	padding-bottom: 1rem;
+}
+
 .FormInMobile label {
 	display: block;
 	text-align: center;
 }
 
 .FormInMobile :global(.ant-form-item) {
-	padding-bottom: 3rem;
+	padding-bottom: 1rem;
 }
 
 .Failure {
